===
=== Emacs Modified for macOS
===

# VERSION 26.2-modified-1 (19 April 2019)

## Updates

- Emacs 26.2 released 14 April 2019
- Org 9.2.3


# VERSION 26.1-2-modified-2 (11 November 2018)

## Updates

- ESS 18.10.2 (patched to include the *.el files in the distribution)
- Org 9.1.14

## User visible changes

- Polymode is removed from the distribution. See
  https://polymode.github.io/ to install the package.


# VERSION 26.1-2-modified-1 (31 May 2018)

## Updates

- Emacs 26.1 released 28 May 2018
- Org 9.1.13

# VERSION 25.3-modified-2 (18 January 2018)

## Updates

- AUCTeX 12.1
- Org 9.1.6


# VERSION 25.3-modified-1 (16 November 2017)

This version brings many package updates. I realize I somewhat fell
behind!

- Emacs 25.3
- ESS 17.11
- AUCTeX 11.91
- Org 9.1.3
- markdownmode.el v2.3


# VERSION 25.2-modified-2 (2 June 2017)

## Updates

- Org 9.0.7
- polymode 2017-03-07
- markdownmode.el v2.2

## Bug fix

- markdownmode.el was broken in the previous release.


# VERSION 25.2-modified-1 (4 May 2017)

## Updates

- GNU Emacs 25.2, released April 21, 2017.
- Org 9.0.6

## User visible changes

- In `site-start.el`, `ess-nuke-trailing-whitespace` is now added to
  the `write-contents-functions` hook to avoid bleeding of the
  functionality to other major modes (most notably markdown, where
  trailing whitespace is sometimes useful).


# VERSION 25.1-1-modified-5 (11 January 2016)

## Updates

- AUCTeX 11.90


# VERSION 25.1-1-modified-4 (9 January 2016)

*This is essentially a release to setup the new release mechanism through GitHub*

## Updates

- Org 9.0.3


# VERSION 25.1-1-modified-3 (15 December 2016)

## Updates

- GNU Emacs 25.1-1, released September 20, 2016 by David Caldwell.
- Org 9.0.2

## Bug fix

- `emacs-modified-version` now correctly report the Emacs patch level.


# VERSION 25.1-modified-2 (24 October 2016)

## Updates

- ESS 16.10


# VERSION 25.1-modified-1 (19 September 2016)

## Updates

- GNU Emacs 25.1, released September 17, 2016.